# waves-forecast

./: .gitignore  .gitmodules  README.md  backend.env.example  docker-compose.yml  initialize-storage.sh  requirements.txt
backend/: Dockerfile  beach_morphology.py  cache.py  config.py  context.py  data_retrieval.py  forecast_calculation.py  forecast_data.py  function_app.py  geocode.py  grib_parser.py  host.json  known_locations.json  local.settings.json  locations.py  main.py  map.py  metocean_data_retrieval.py  pyproject.toml  requirements.txt  surf_data.py  swell_calculation.py  swell_calculations.py  tide_calculations.py  tides.py  wave_model.py  wave_rating.py
backend/static/styles/: form.js  styles.css
backend/templates/: 404.html  500.html  forecast.html  index.html
frontend/: .env  .env.production  .gitignore  package-lock.json  package.json  tsconfig.json
frontend/app/: App.tsx  ForecastContent.tsx  ForecastData.tsx  ForecastItem.tsx  ForecastLoading.tsx  ForecastPage.tsx  Graph.tsx  Home.tsx  HourlyForecastGrid.tsx  LocationData.ts  LocationForm.tsx  LocationMap.tsx  MapComponent.tsx  NotFound.tsx  PlotlyGraph.tsx  ProgressBar.css  ProgressBar.tsx  Stations.ts  TideGraph.tsx  Units.ts  WaveChart.tsx  api.ts  error.tsx  index.html  index.tsx  mobile.ts  not-found.tsx  page.tsx
frontend/styles/: globals.css
src/: NOAA_data_retrieval.py  cache.py  data_retrieval.py  filteredLocations.py  locations.py  main.py  map.py  models.py  new_data.py  schema.sql  surf_data.py  weather_alerts.py
src/static/styles/: styles.css
src/templates/: 404.html  500.html  forecast.html  index.html  list_form.html
