[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "24.10.0"

[project]
name = "waves-forecast-backend"
requires-python = ">=3.10,<3.11"
dependencies = [
    "requests (==2.32.3)",
    "surfpy @ git+https://github.com/mpiannucci/surfpy.git@c2c4b288777ec539dfa07aa9aeda51a68edcfdd4",
    "pygrib (==2.1.6)",
    "aiohttp (==3.11.14)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "boto3 (>=1.39.4,<2.0.0)",
    "boto3-stubs[boto3,s3] (>=1.39.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
